deploy/webapp/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: webapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - podinfo.blaataap.com
  rules:
    - host: podinfo.blaataap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
